Add bootstrap, change hidden class from body, put hidden and hiding on sections to toggle classes, put show/hide button in separate div.

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<link rel="stylesheet" type="text/css" href="resume.css" />
+        <link rel="stylesheet" href="./bootstrap.min.css" />
+		<link rel="stylesheet" href="./resume.css" />
 		<title>Shawn Fagerstrom - Resume</title>
-		<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js"></script>
-		<script src="scripts.js"></script>
+		<script src="./jquery-2.1.4.min.js"></script>
+		<script src="./scripts.js"></script>
 	</head>
-	<body class="hidden">
-		<input type="button" value="Show Resume" id="show_btn" /><br>
-		<section>
+	<body>
+        <input type="button" value="Show Resume" id="show_btn" />
+		<section class="hiding hidden">
 			<div class="shading">
 				<h2>Shawn Fagerstrom</h2>
 				<p>1491 Elm Street South, Cambridge MN 55008<br>
 				Phone (763) 742-2508    <span class="underline">shawnf1@gmail.com</span></p>
 			</div>
 		</section>
-		<section>
+		<section class="hiding hidden">
 			<div class="center">
 				<h1>SUMMARY PROFILE</h1>
 				<p>Detail-oriented self-starter who is not afraid of hard work. Entrepreneurial mindset as demonstrated with the design, programing and implementation of the simplified carrier delivery, collections software developed over a 16 month period.</p>
@@ -40,7 +41,7 @@
 				<hr class="single" />
 				<section>
 					<div class="shading">
-						<h3>STAR TRIBUNE, Cambridge, MN. – Carrier, Assistant Depot Manager, 2004 to Present.</h3>
+						<h3>STAR TRIBUNE, Cambridge, MN. ï¿½ Carrier, Assistant Depot Manager, 2004 to Present.</h3>
 						<p>Founded in 1869 the Star Tribune has grown into the largest newspaper in the region.</p>
 					</div>
 					<p class="block">Delivered newspapers and co-managed the Depot.</p>
@@ -52,7 +53,7 @@
 				<hr class="single" />
 				<section>
 					<div class="shading">
-						<h3>ANY KEY PC, Cambridge, MN. – Co-Founder, 2010-2012</h3>
+						<h3>ANY KEY PC, Cambridge, MN. ï¿½ Co-Founder, 2010-2012</h3>
 						<p>Privately held personal computer repair shop that offered both hardware and software repairs/upgrades.</p>
 					</div>
 					<p class="block">Responsible for both the front office of the business (customer service and sales) as well as the back office (billings, ordering parts, administration, etc.)</p>
@@ -64,7 +65,7 @@
 			</section>
 		</section>
 		<hr class="double" />
-		<section class="education">
+		<section class="education hiding hidden">
 			<div>
 				<h4>Education:</h4>
             </div>
